FMS-C48 Add a basic brushing functionality in the status-matrix

--- a/fms-gui-client/src/styles.scss
+++ b/fms-gui-client/src/styles.scss
@@ -1,7 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'styles/grid';
-
-$grey: #f8f8f8;
+@import 'styles/colors';
 
 * {
   line-height: 1.5em;
