FMS-C48 Make brushing in the status-matrix work (filter out values, which do not correspond to the range)

--- a/fms-gui-client/src/app/components/visualization/status-matrix/status-matrix.component.scss
+++ b/fms-gui-client/src/app/components/visualization/status-matrix/status-matrix.component.scss
@@ -1,9 +1,5 @@
 @import "src/styles/colors";
 
-.brush-container {
-  background-color: $grey;
-}
-
 .cell {
   margin: 1px;
 }
@@ -12,6 +8,14 @@
   filter: brightness(90%);
 }
 
+.js-row {
+  min-height: 35px;
+}
+
 .padding-2px {
   padding: 2px;
+}
+
+.overlay {
+  fill: darken($grey, 10%);
 }
