--- a/fms-gui-client/src/app/components/flight-mode/flight-mode.component.html
+++ b/fms-gui-client/src/app/components/flight-mode/flight-mode.component.html
@@ -4,25 +4,7 @@
   <div id="flight-mode-main" class="margin-side-1em flex-grow-1">
     <div class="grid-cols-2 h-100" *ngIf="fmsDataService.isDataPresent">
       <app-radar class="h-100"></app-radar>
-      <div>
-        <div *ngIf="this.gnss !== null">
-          <ul id="flight-mode-information">
-            <li *ngFor="let item of gnssArray[0]">
-              <div class="grid-cols-2">
-                <span>
-                  {{item.name}}
-                </span>
-                <span>
-                  {{item.value}}
-                </span>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div *ngIf="this.gnss === null">
-          No GNSS available
-        </div>
-      </div>
+      <app-last-position-data class="h-100"></app-last-position-data>
     </div>
     <app-loading *ngIf="!fmsDataService.isDataPresent"></app-loading>
   </div>
