FMS-C47 Add brush to the radar (without functionality)

--- a/fms-gui-client/src/app/components/visualization/radar/radar.component.html
+++ b/fms-gui-client/src/app/components/visualization/radar/radar.component.html
@@ -1,4 +1,5 @@
-<div id="radar-chart-div" class="d-flex h-100">
+<div id="radar-chart-div" class="d-flex flex-grow-1">
+  <div id="radar-container" class="w-100 h-100"></div>
   <div id="radar-configuration">
     <mat-icon id="toggle-icon" class="pointer" (click)="toggleConfiguration()" title="Collapse radar configuration">
       keyboard_arrow_down
@@ -39,3 +40,4 @@
     </form>
   </div>
 </div>
+<div id="radar-brush" class="brush-container"></div>
