--- a/fms-gui-client/src/app/components/flight-mode/flight-mode.component.html
+++ b/fms-gui-client/src/app/components/flight-mode/flight-mode.component.html
@@ -2,8 +2,8 @@
 <main class="d-flex flex-column">
   <mat-toolbar>{{ title }}</mat-toolbar>
   <div id="flight-mode-main" class="margin-side-1em flex-grow-1">
-    <div class="grid-cols-2 h-100" *ngIf="fmsDataService.isDataPresent">
-      <app-radar class="h-100"></app-radar>
+    <div class="grid-cols-2 gtc-70-30 h-100" *ngIf="fmsDataService.isDataPresent">
+      <app-radar class="h-100 d-flex flex-column"></app-radar>
       <app-last-position-data class="h-100"></app-last-position-data>
     </div>
     <app-loading *ngIf="!fmsDataService.isDataPresent"></app-loading>
