--- a/fms-gui-client/src/app/components/visualization/status-matrix/status-matrix.component.html
+++ b/fms-gui-client/src/app/components/visualization/status-matrix/status-matrix.component.html
@@ -1,2 +1,7 @@
 <div id="status-matrix-attributes"></div>
-<div id="status-matrix-brush"></div>
+<div class="grid-cols-2 gtc-90-10">
+  <div id="status-matrix-brush"></div>
+  <div>
+    <!-- Empty, needed for styling -->
+  </div>
+</div>
