FMS-C47 Add brush functionality to the radar

--- a/fms-gui-client/src/app/components/flight-mode/last-position-data/last-position-data.component.html
+++ b/fms-gui-client/src/app/components/flight-mode/last-position-data/last-position-data.component.html
@@ -11,6 +11,16 @@
         </span>
       </div>
     </li>
+    <li>
+      <div class="grid-cols-2">
+        <span>
+          Timestamp
+        </span>
+        <span>
+          {{ fmsDataService.getValue(timestampPath)}}
+        </span>
+      </div>
+    </li>
   </ul>
 </div>
 <div *ngIf="this.gnss === null">
