--- a/fms-gui-client/src/app/components/visualization/status-matrix/status-matrix.component.html
+++ b/fms-gui-client/src/app/components/visualization/status-matrix/status-matrix.component.html
@@ -1,7 +1,4 @@
-<div id="status-matrix-attributes"></div>
-<div class="grid-cols-2 gtc-90-10">
-  <div id="status-matrix-brush"></div>
-  <div>
-    <!-- Empty, needed for styling -->
-  </div>
+<div id="brush" class="w-100"></div>
+<div id="status-matrix-div" class="d-flex flex-grow-1">
+  <div id="status-matrix-attributes" class="w-100 h-100"></div>
 </div>
