--- a/fms-gui-client/src/app/components/visualization/status-matrix/status-matrix.component.html
+++ b/fms-gui-client/src/app/components/visualization/status-matrix/status-matrix.component.html
@@ -1,4 +1,7 @@
-<div id="brush" class="w-100"></div>
+<div class="grid-cols-2 gtc-90-10">
+  <div id="brush" class="w-100"></div>
+  <div></div>
+</div>
 <div id="status-matrix-div" class="d-flex flex-grow-1">
   <div id="status-matrix-attributes" class="w-100 h-100"></div>
 </div>
