--- a/fms-gui-client/src/app/components/flight-mode/flight-mode.component.html
+++ b/fms-gui-client/src/app/components/flight-mode/flight-mode.component.html
@@ -1,11 +1,20 @@
 <!-- Displays the current flight with the data from the FMS JSON -->
 <main class="d-flex flex-column">
   <mat-toolbar>{{ title }}</mat-toolbar>
-  <div id="flight-mode-main" class="margin-side-1em flex-grow-1">
-    <div class="grid-cols-2 gtc-70-30 h-100" *ngIf="fmsDataService.isDataPresent">
-      <app-radar class="h-100 d-flex flex-column"></app-radar>
-      <app-last-position-data class="h-100"></app-last-position-data>
+  <div class="margin-side-1em d-flex flex-grow-1 h-100" *ngIf="fmsDataService.isDataPresent">
+      <mat-tab-group class="w-100">
+        <mat-tab label="Position">
+          <ng-template matTabContent>
+            <app-flight-position></app-flight-position>
+          </ng-template>
+        </mat-tab>
+        <mat-tab label="Direction">
+          <ng-template matTabContent>
+            <app-flight-direction></app-flight-direction>
+          </ng-template>
+        </mat-tab>
+      </mat-tab-group>
+      <app-last-position-data class="h-100 margin-side-1em"></app-last-position-data>
     </div>
-    <app-loading *ngIf="!fmsDataService.isDataPresent"></app-loading>
-  </div>
+  <app-loading *ngIf="!fmsDataService.isDataPresent"></app-loading>
 </main>
