FMS-C52 Position flight-mode elements via CSS grid

--- a/fms-gui-client/src/app/components/flight-mode/flight-direction/flight-direction.component.html
+++ b/fms-gui-client/src/app/components/flight-mode/flight-direction/flight-direction.component.html
@@ -1,1 +1,5 @@
-<app-radar class="h-100 d-flex flex-column"></app-radar>
+<div id="flight-direction" class="flight-mode-grid">
+  <app-radar class="main"></app-radar>
+  <div id="flight-direction-brush" class="footer"></div>
+  <app-radar-config class="aside"></app-radar-config>
+</div>
