--- a/fms-gui-client/src/app/components/flight-mode/flight-mode.component.scss
+++ b/fms-gui-client/src/app/components/flight-mode/flight-mode.component.scss
@@ -1,3 +1,39 @@
 main {
   height: 100%;
 }
+
+// Medium screens
+@media all and (min-width: 800px) {
+  #flight-mode {
+    display: grid;
+    grid-gap: 0;
+    grid-template-columns: auto 180px;
+    grid-template-areas: "content aside";
+
+    .main {
+      grid-area: content;
+    }
+    .aside {
+      grid-area: aside;
+    }
+  }
+
+  .flight-mode-grid {
+    display: grid;
+    grid-gap: 0;
+    grid-template-columns: auto 180px;
+    grid-template-areas:
+      "content side"
+      "footer side";
+
+    .main {
+      grid-area: content;
+    }
+    .aside {
+      grid-area: side;
+    }
+    .footer {
+      grid-area: footer;
+    }
+  }
+}
