--- a/fms-gui-client/src/app/components/visualization/radar/radar.component.html
+++ b/fms-gui-client/src/app/components/visualization/radar/radar.component.html
@@ -1,43 +1,1 @@
-<div id="radar-chart-div" class="d-flex flex-grow-1">
-  <div id="radar-container" class="w-100 h-100"></div>
-  <div id="radar-configuration">
-    <mat-icon id="toggle-icon" class="pointer" (click)="toggleConfiguration()" title="Collapse radar configuration">
-      keyboard_arrow_down
-    </mat-icon>
-    <form [formGroup]="radarForm.configurationForm">
-      <div class="d-flex flex-column align-items-end" id="radar-config-container" *ngIf="isConfigOpen">
-        <div formGroupName="center" class="d-flex flex-column">
-          <h3 class="mat-h3">Center</h3>
-
-          <mat-form-field>
-            <mat-label>Latitude</mat-label>
-            <label>
-              <input type="number" formControlName="latitude" matInput placeholder="0" min="-90" max="90"/>
-            </label>
-          </mat-form-field>
-
-          <mat-form-field>
-            <mat-label>Longitude</mat-label>
-            <label>
-              <input type="number" formControlName="longitude" matInput placeholder="0" min="-180" max="180"/>
-            </label>
-          </mat-form-field>
-        </div>
-
-        <div class="d-flex flex-column">
-          <h3 class="mat-h3">Rotation</h3>
-
-          <mat-form-field>
-            <mat-label>Degree</mat-label>
-            <label>
-              <input type="number" formControlName="rotation" matInput placeholder="0" value="0"/>
-            </label>
-          </mat-form-field>
-        </div>
-
-        <button mat-raised-button (click)="resetZoom()" value="Reset Zoom">Reset Zoom</button>
-      </div>
-    </form>
-  </div>
-</div>
-<div id="brush" class="w-100"></div>
+<div id="radar"></div>
