FMS-C52 Move the brush functionality to timestamp-brush.component

--- a/fms-gui-client/src/app/components/flight-mode/flight-direction/flight-direction.component.html
+++ b/fms-gui-client/src/app/components/flight-mode/flight-direction/flight-direction.component.html
@@ -1,5 +1,5 @@
 <div id="flight-direction" class="flight-mode-grid">
   <app-radar class="main"></app-radar>
-  <div id="flight-direction-brush" class="footer"></div>
+  <app-timestamp-brush id="flight-direction-brush" class="footer"></app-timestamp-brush>
   <app-radar-config class="aside"></app-radar-config>
 </div>
