--- a/fms-gui-client/src/app/components/flight-mode/flight-mode.component.html
+++ b/fms-gui-client/src/app/components/flight-mode/flight-mode.component.html
@@ -5,12 +5,12 @@
     <mat-tab-group class="main" animationDuration="0ms">
       <mat-tab label="Position">
         <ng-template matTabContent>
-          <app-flight-position></app-flight-position>
+          <app-flight-position class="flight-mode-tab"></app-flight-position>
         </ng-template>
       </mat-tab>
       <mat-tab label="Direction">
         <ng-template matTabContent>
-          <app-flight-direction></app-flight-direction>
+          <app-flight-direction class="flight-mode-tab"></app-flight-direction>
         </ng-template>
       </mat-tab>
     </mat-tab-group>
