--- a/fms-gui-client/src/app/components/flight-mode/flight-mode.component.scss
+++ b/fms-gui-client/src/app/components/flight-mode/flight-mode.component.scss
@@ -17,5 +17,11 @@ main {
     .aside {
       grid-area: aside;
     }
+
+    .flight-mode-tab {
+      display: block;
+      height: 100%;
+      padding-bottom: 1em;
+    }
   }
 }
