--- a/fms-gui-client/src/app/components/flight-mode/flight-position/flight-position.component.html
+++ b/fms-gui-client/src/app/components/flight-mode/flight-position/flight-position.component.html
@@ -1,5 +1,5 @@
 <div id="flight-position" class="flight-mode-grid">
   <app-radar class="main"></app-radar>
-  <div id="flight-position-brush" class="footer"></div>
+  <app-timestamp-brush id="flight-position-brush" class="footer"></app-timestamp-brush>
   <app-radar-config class="aside"></app-radar-config>
 </div>
