FMS-C52 Add the resizing of the brush as soon as we select a range

--- a/fms-gui-client/src/app/components/flight-mode/flight-mode.component.html
+++ b/fms-gui-client/src/app/components/flight-mode/flight-mode.component.html
@@ -14,6 +14,7 @@
         </ng-template>
       </mat-tab>
     </mat-tab-group>
+    <app-timestamp-brush id="flight-mode-brush" class="footer"></app-timestamp-brush>
     <app-last-position-data class="h-100 margin-side-1em aside"></app-last-position-data>
   </div>
   <app-loading *ngIf="!fmsDataService.isDataPresent"></app-loading>
