--- a/fms-gui-client/src/styles/flight-mode-grid.scss
+++ b/fms-gui-client/src/styles/flight-mode-grid.scss
@@ -6,19 +6,13 @@
     height: 100%;
     grid-gap: 0;
     grid-template-columns: auto 180px;
-    grid-template-rows: auto 50px;
-    grid-template-areas:
-      "content side"
-      "footer side";
+    grid-template-areas: "content side";
 
     .main {
       grid-area: content;
     }
     .aside {
       grid-area: side;
-    }
-    .footer {
-      grid-area: footer;
     }
   }
 }
