FMS-C52 Start reimplementing the general radar

--- a/fms-gui-client/src/app/components/flight-mode/flight-direction/flight-direction.component.html
+++ b/fms-gui-client/src/app/components/flight-mode/flight-direction/flight-direction.component.html
@@ -1,4 +1,4 @@
 <div id="flight-direction" class="flight-mode-grid">
-  <app-radar class="main"></app-radar>
+  <app-radar id="flight-direction-radar" class="main"></app-radar>
   <app-radar-config class="aside"></app-radar-config>
 </div>
