FMS-C52 Implement rotation change communication

--- a/fms-gui-client/src/app/components/visualization/radar/radar.component.scss
+++ b/fms-gui-client/src/app/components/visualization/radar/radar.component.scss
@@ -32,3 +32,8 @@
   transform-origin: center;
   transform: rotateZ(-45deg) translateY(45%);
 }
+
+.line {
+  stroke: black;
+  stroke-width: 0.2;
+}
