FMS-C52 Add zooming (causes rotation to behave incorrectly)

--- a/fms-gui-client/src/app/components/visualization/radar/radar.component.scss
+++ b/fms-gui-client/src/app/components/visualization/radar/radar.component.scss
@@ -28,6 +28,10 @@
   transform: translateX(50%);
 }
 
+.transform-origin-center {
+  transform-origin: center;
+}
+
 .axis-diagonal {
   transform-origin: center;
   transform: rotateZ(-45deg) translateY(45%);
