FMS-C17 Let the users know on what page they are

--- a/fms-gui-client/src/app/components/nav/nav.component.html
+++ b/fms-gui-client/src/app/components/nav/nav.component.html
@@ -1,6 +1,10 @@
 <mat-nav-list *ngIf="navItems">
   <!-- Navigation items -->
-  <mat-list-item *ngFor="let item of navItems" (click)="nav.click()">
+  <mat-list-item
+    *ngFor="let item of navItems"
+    (click)="nav.click()"
+    routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"
+  >
     <mat-icon matListIcon aria-hidden="true">{{item.icon}}</mat-icon>
     <a [routerLink]="['/' + item.path]" #nav>{{item.title}}</a>
   </mat-list-item>
