--- a/fms-gui-client/src/app/components/nav/nav.component.html
+++ b/fms-gui-client/src/app/components/nav/nav.component.html
@@ -3,7 +3,7 @@
   <mat-list-item
     *ngFor="let item of navItems"
     (click)="nav.click()"
-    routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"
+    routerLinkActive="active" [routerLinkActiveOptions]="{exact: item.routerLinkActiveExact}"
   >
     <mat-icon matListIcon aria-hidden="true">{{item.icon}}</mat-icon>
     <a [routerLink]="['/' + item.path]" #nav>{{item.title}}</a>
