FMS-C52 Fix radar not resizing correctly on window resize

--- a/fms-gui-client/src/app/components/flight-mode/flight-position/flight-position.component.html
+++ b/fms-gui-client/src/app/components/flight-mode/flight-position/flight-position.component.html
@@ -1,4 +1,4 @@
 <div id="flight-position" class="flight-mode-grid">
-  <app-radar id="flight-position-radar" class="main" (rotationEmitter)="notifyRotationChange($event)"></app-radar>
+  <app-radar id="flight-position-radar"></app-radar>
   <app-radar-config class="aside"></app-radar-config>
 </div>
